tests/baselines/reference/genericSpecializations3.errors.txt
==== tests/cases/compiler/genericSpecializations3.ts (3 errors) ====
    interface IFoo<T> {
        foo(x: T): T;
    }
    
    var iFoo: IFoo<number>;
    iFoo.foo(1);
    
    class IntFooBad implements IFoo<number> { // error
          ~~~~~~~~~
!!! error TS2421: Class 'IntFooBad' incorrectly implements interface 'IFoo<number>':
!!! error TS2421:   Types of property 'foo' are incompatible:
!!! error TS2421:     Type '(x: string) => string' is not assignable to type '(x: number) => number':
!!! error TS2421:       Types of parameters 'x' and 'x' are incompatible:
!!! error TS2421:         Type 'string' is not assignable to type 'number'.
        foo(x: string): string { return null; }
    }
    
    var intFooBad: IntFooBad;
    
    class IntFoo implements IFoo<number> {
        foo(x: number): number { return null; }
    }
    
    var intFoo: IntFoo;
    
    class StringFoo2 implements IFoo<string> {
        foo(x: string): string { return null; }
    }
    
    var stringFoo2: StringFoo2;
    stringFoo2.foo("hm");
    
    
    intFoo = stringFoo2; // error
    ~~~~~~
!!! error TS2322: Type 'StringFoo2' is not assignable to type 'IntFoo':
!!! error TS2322:   Types of property 'foo' are incompatible:
!!! error TS2322:     Type '(x: string) => string' is not assignable to type '(x: number) => number':
!!! error TS2322:       Types of parameters 'x' and 'x' are incompatible:
!!! error TS2322:         Type 'string' is not assignable to type 'number'.
    stringFoo2 = intFoo; // error
    ~~~~~~~~~~
!!! error TS2322: Type 'IntFoo' is not assignable to type 'StringFoo2':
!!! error TS2322:   Types of property 'foo' are incompatible:
!!! error TS2322:     Type '(x: number) => number' is not assignable to type '(x: string) => string':
!!! error TS2322:       Types of parameters 'x' and 'x' are incompatible:
!!! error TS2322:         Type 'number' is not assignable to type 'string'.
    
    
    class StringFoo3 implements IFoo<string> { // error
        foo<T>(x: T): T { return null; }
    }
    var stringFoo3: StringFoo3;